 - Fixed issues in parsing of "accept*" HTTP headers. Added unit tests. Reported by AJ Barnes and Jeff Walter.
 - Fixed potential NPE in HostScorer.
 - Fixed RDF media type from "application/rdf-xml" to "application/rdf+xml". Reported by Aldo Bucchi.
 - Made VirtualHost-based routing case-insensitive. Suggested by Thierry Boileau.
 
[API changes]
 - Added attachDefault(Restlet) method to Router class. The detach() method now also detaches the default scorer.
 - Deprecated the StringTemplate mechanism, replaced by a more seamless ReferenceTemplate approach,
   less intrusive. The following classes were deprecated and will be removed in the next
   release: StringTemplate, StringTemplateRepresentation, CallModel, Model, MapModel.
 - Extractor was deprecated and replaced by the new Route class.
 - Renamed ReferenceList.getRepresentation() to getTextRepresentation().
 - Tag now extends Metadata, getOpaqueTag() was deprecated, use getName() instead.
 - The query part of request's resource reference is now routable. WARNING: you may have
   to revisit your router URI patterns, especially to remove the ending "$" characters.
 - Directory.getDirectoryVariants() now returns a textual list in addition of a HTML doc.
 - org.restlet.Restlet class now overrides org.restlet.Dispatcher to facilate client-side invocation of filters such as Redirector.
 - Language class now supports several sub-tags. "MainTag" property renamed to "PrimaryTag". Contributed by Thierry Boileau.
 - Improved and expanded support for the "Allow" HTTP header all over the API and NRE.
 - The LogService, Redirector, Route and context Dispatcher are all based on the same template mechanism and syntax provided by org.restlet.util.Template.
 - Removed Chainer class and spread logic in Filter and Router classes.
 - Added getRemainingPart() method to Reference, reusing the getRelativePart() logic previously in Request.