@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Thu Dec 14 11:40:30 CET 2006
-build.number=551
+#Thu Dec 14 12:35:24 CET 2006
+build.number=552
